--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@ h3 {
     font-size: 2.5rem;
 }
 
-
 p {
     display: block;
     margin-block-start: 0px;
@@ -149,9 +148,12 @@ footer h5 {
     color: #039be5;
 }
 
-    @media only screen and (min-width: 993px) {
-        .parallax img {
-            max-height: 170%; /* or higher percentages. It's up to your taste */
-        }
+@media only screen and (min-width: 993px) {
+    .parallax img {
+        max-height: 170%; /* or higher percentages. It's up to your taste */
     }
+}
 
+.small-heading {
+    font-size: 1.25rem;
+}
