--- a/src/App.css
+++ b/src/App.css
@@ -155,5 +155,48 @@ footer h5 {
 }
 
 .small-heading {
-    font-size: 1.25rem;
+    font-size: 1rem;
 }
+
+* {
+    box-sizing: border-box;
+}
+
+/*Flex items*/
+.list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.list-item {
+    display: flex;
+    padding: 0.5em;
+    width: 33.33%;
+}
+
+@media all and (min-width: 40em) {
+    .list-item {
+        width: 50%;
+    }
+
+
+}
+
+@media all and (min-width: 60em) {
+    .list-item {
+        width: 33.33%;
+    }
+   
+}
+
+.list-content {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    width: 100%;
+}
+
+    .list-content p {
+        flex: 1 0 auto;
+    }
